# AIM-public

./: configure.ac  env.am
include/: util.h
include/arch/i386/: Makefile.am
include/arch/um/: Makefile.am  arch-bitops.h  arch-irq.h  arch-mmu.h  arch-sync.h  atomic.h  context.h  platform.h  um-common.h  um-debug.h  um-mmu.h  um-sync.h  um-terminal.h  um-worker.h
kern/: Makefile.am
kern/arch/: Makefile.am
kern/arch/um/: Makefile.am  arch_mmu.c  console.c  main.c  um-debug.c  um-entry.c  um-mmu.c  um-sync.c  um-worker.c  vmaim.lds.S
kern/dev/index/: Makefile.am
kern/proc/sched/: sched.c
m4/: aim_arch.m4
